On my way. Need input.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "medical_job_board",
   "private": true,
   "dependencies": {
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.2.1"
   }
 }
