--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,8 @@ dump.rdb
 # Ignore application configuration
 /config/application.yml
 
+/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+.yarn-integrity
