--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "medical_job_board",
   "private": true,
   "dependencies": {
-    "bootstrap": "^3.3.7",
-    "jquery": "^3.2.1"
+    "@rails/webpacker": "3.5",
+    "bootstrap": "4.0.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
+    "rails-ujs": "^5.2.1"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "2.11.2"
   }
 }
