--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,10 @@
 {
-    "extends": "airbnb"
+    "env": {
+        "browser": true,
+        "jquery": true
+    },
+    "extends": "airbnb",
+    "rules": {
+       "react/destructuring-assignment": ["true", "never"]
+    }
 }
